introduction of the error and total sum

--- a/72_2D_MFPADs_CH11_experiment.ipynb
+++ b/72_2D_MFPADs_CH11_experiment.ipynb
@@ -107,15 +107,15 @@
    "outputs": [],
    "source": [
     "#Loading of the MFPADS and cos len = 27\n",
-    "MFPAD_RCR,ctheta_RCR,cosphi_photon,MFPAD_axis,ctheta_axis,ctheta_axis_red=fugi.import_MFPAD(fileRCR, loc, full=True)\n",
-    "MFPAD_RCL,ctheta_RCL=fugi.import_MFPAD(fileRCL, loc)\n",
+    "MFPAD_RCR,ctheta_RCR,ctheta_RCR_err,cosphi_photon,MFPAD_axis,ctheta_axis,ctheta_axis_red=fugi.import_MFPAD(fileRCR, loc, full=True)\n",
+    "MFPAD_RCL,ctheta_RCL,ctheta_RCL_err=fugi.import_MFPAD(fileRCL, loc)\n",
     "#projection of cos on x axis: len = 18\n",
     "cosx_RCR=fugi.projection(MFPAD_RCR,alongaxis=0)\n",
     "cosx_RCL=fugi.projection(MFPAD_RCL,alongaxis=0)\n",
     "\n",
     "if fileSCL and fileSCR is not None:    \n",
-    "    MFPAD_SCR,ctheta_SCR=fugi.import_MFPAD(fileSCR, loc)\n",
-    "    MFPAD_SCL,ctheta_SCL=fugi.import_MFPAD(fileSCL, loc)\n",
+    "    MFPAD_SCR,ctheta_SCR,ctheta_SCR_err=fugi.import_MFPAD(fileSCR, loc)\n",
+    "    MFPAD_SCL,ctheta_SCL,ctheta_SCL_err=fugi.import_MFPAD(fileSCL, loc)\n",
     "    #projection of cos on x axis\n",
     "    cosx_SCR=fugi.projection(MFPAD_SCR,alongaxis=0)\n",
     "    cosx_SCL=fugi.projection(MFPAD_SCL,alongaxis=0)"
@@ -176,8 +176,8 @@
     "\"\"\"\n",
     "# fugi = reload(fugi)\n",
     "\n",
-    "xgo_phi,ygo_phi,cosphi_adj_phi = fugi.create_gocoords(a=0, reduced=False, source=True)\n",
-    "xgo_cos,ygo_cos,cosphi_adj_cos = fugi.create_gocoords(a=1, reduced=False, source=True)\n",
+    "xgo_phi,ygo_phi,cosphi_adj_phi = fugi.create_gocoords(a=0, reduced=True, source=True)\n",
+    "xgo_cos,ygo_cos,cosphi_adj_cos = fugi.create_gocoords(a=1, reduced=True, source=True)\n",
     "\n",
     "# list(zip(xgo_phi,ygo_phi))\n",
     "print(\"(xgo_cos (phi), ygo_cos (ctheta)) \\n\", list(zip(xgo_cos,ygo_cos))[:6])\n",
@@ -396,11 +396,15 @@
     "    #PECD check it is equal to contrast\n",
     "    mPECD = np.divide(np.subtract(MFPAD_RCLCR_sum,MFPAD_SCLCR_sum),np.add(MFPAD_RCLCR_sum,MFPAD_SCLCR_sum))\n",
     "\n",
+    "    MFPAD_tot_sum_flip=np.flip(MFPAD_tot_sum,axis=0)\n",
+    "    mPECD_hires = np.divide(np.subtract(MFPAD_tot_sum,MFPAD_tot_sum_flip),np.add(MFPAD_tot_sum,MFPAD_tot_sum_flip))\n",
+    "\n",
     "else:\n",
     "    MFPAD_totordered=MFPAD_RCLCR\n",
+    "    MFPAD_totordered_flip=np.flip(MFPAD_RCLCR,axis=0) #simulates the S enantiomer\n",
     "    MFPAD_totordered_cos=MFPAD_RCLCR_cos\n",
     "    MFPAD_totordered_phi=MFPAD_RCLCR_phi\n",
-    "    mPECD=np.divide(np.subtract(MFPAD_RCL_sum,MFPAD_RCR_sum),np.add(MFPAD_RCL_sum,MFPAD_RCR_sum))"
+    "    mPECD=np.divide(np.subtract(MFPAD_totordered,MFPAD_totordered_flip),np.add(MFPAD_totordered,MFPAD_totordered_flip))"
    ]
   },
   {
@@ -774,7 +778,7 @@
     "if fileSCL and fileSCR is not None:\n",
     "    fig,ax= plt.subplots(1, figsize=(12, 10))\n",
     "    cs=ax.contourf(phiM,cosM,fugi.normalise_matrix(MFPAD_SCL_sum,normtype=2).T, cmap=cmap_temp, levels=20)\n",
-    "    ax.set_title(\"SCR tot MFPAD n2 \"+CH+\"_\"+en)\n",
+    "    ax.set_title(\"SCL tot MFPAD n2 \"+CH+\"_\"+en)\n",
     "\n",
     "    aspect=(phiM.max()/cosM.max())\n",
     "    ax.set_xlabel('phi [DEG]')\n",
@@ -785,7 +789,7 @@
     "    cbar.ax.set_ylabel('normalised counts')\n",
     "    ax.set_aspect(aspect)\n",
     "\n",
-    "    fig.savefig(\"../PYTHON_graphs/OUTPUTS/SCR_MFPAD_single_\"+CH+\"_\"+en+\"_exp.png\", figsize=(50, 24), dpi=144, transparent=False)"
+    "    fig.savefig(\"../PYTHON_graphs/OUTPUTS/SCL_MFPAD_single_\"+CH+\"_\"+en+\"_exp.png\", figsize=(50, 24), dpi=144, transparent=False)"
    ]
   },
   {
@@ -797,7 +801,7 @@
     "if fileSCL and fileSCR is not None:\n",
     "    fig,ax= plt.subplots(1, figsize=(12, 10))\n",
     "    cs=ax.contourf(phiM,cosM,MFPAD_tot_sum.T, cmap=cmap_temp, levels=20)\n",
-    "    ax.set_title(\"SCR tot MFPAD n2 \"+CH+\"_\"+en)\n",
+    "    ax.set_title(\"total MFPAD \"+CH+\"_\"+en)\n",
     "\n",
     "    aspect=(phiM.max()/cosM.max())\n",
     "    ax.set_xlabel('phi [DEG]')\n",
@@ -809,29 +813,6 @@
     "    ax.set_aspect(aspect)\n",
     "\n",
     "    fig.savefig(\"../PYTHON_graphs/OUTPUTS/SCR_MFPAD_single_\"+CH+\"_\"+en+\"_exp.png\", figsize=(50, 24), dpi=144, transparent=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
-    "cs=ax.contourf(phiM,cosM,MFPAD_tottest, cmap=cmap_temp, levels=20)\n",
-    "# cs=ax.imshow(MFPAD_tottest, cmap=cmap_temp, origin=\"lower\")\n",
-    "ax.set_title(\"total MFPAD KIlian norm \"+CH+\"_\"+en)\n",
-    "\n",
-    "aspect=(phiM.max()/cosM.max())\n",
-    "ax.set_xlabel('phi [DEG]')\n",
-    "ax.set_ylabel('cos(theta) [adm]')\n",
-    "cbar = fig.colorbar(cs,extend='both',shrink=0.9, ax=ax)\n",
-    "cbar.set_ticklabels([\"min\",\"max\"])\n",
-    "cbar.set_ticks([MFPAD_tottest.min(),MFPAD_tottest.max()])\n",
-    "cbar.ax.set_ylabel('normalised counts')\n",
-    "ax.set_aspect(aspect)\n",
-    "\n",
-    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/total_MFPAD_kilian_\"+CH+\"_\"+en+\"_exp.png\", figsize=(50, 24), dpi=144, transparent=False)"
    ]
   },
   {
@@ -920,27 +901,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if fileSCL and fileSCR is None:\n",
-    "    #this can be all added togheter to create the total sum\n",
-    "    fig,ax = plt.subplots(1,2, figsize=(15, 15), sharex=True, sharey=True)\n",
-    "    st = fig.suptitle(\"MFPAD \"+CH+\"_\"+en, fontsize=\"x-large\")\n",
-    "    aspect=(phiM.max()/cosM.max())\n",
-    "    \n",
-    "    cs1=ax[0].contourf(phiM,cosM,MFPAD_RCR_sum.T,cmap=cmap_temp)\n",
-    "    ax[0].set_title(\"RCR\")\n",
-    "    ax[0].set_ylabel('cos(theta) [adm]')\n",
-    "    ax[0].set_xlabel('phi [DEG]')\n",
-    "    # fig.colorbar(cs1, extend='both', shrink=0.9, ax=ax[0][0])\n",
-    "    ax[0].set_aspect(aspect)\n",
-    "    \n",
-    "    cs2=ax[1].contourf(phiM,cosM,MFPAD_RCL_sum.T,cmap=cmap_temp)\n",
-    "    ax[1].set_title(\"SCR_flip\")\n",
-    "    ax[1].set_ylabel('cos(theta) [adm]')\n",
-    "    ax[1].set_xlabel('phi [DEG]')\n",
-    "    # fig.colorbar(cs2,extend='both', shrink=0.9, ax=ax[0][1])\n",
-    "    ax[1].set_aspect(aspect)\n",
-    "    \n",
-    "    fig.savefig(\"../PYTHON_graphs/OUTPUTS/total_MFPAD_sum_R_test_\"+CH+\"_\"+en+\"_exp.png\", figsize=(50, 24), dpi=144, transparent=False)"
+    "#this can be all added togheter to create the total sum\n",
+    "fig,ax = plt.subplots(1,2, figsize=(15, 15), sharex=True, sharey=True)\n",
+    "st = fig.suptitle(\"MFPAD \"+CH+\"_\"+en, fontsize=\"x-large\")\n",
+    "aspect=(phiM.max()/cosM.max())\n",
+    "\n",
+    "cs1=ax[0].contourf(phiM,cosM,MFPAD_RCR_sum.T,cmap=cmap_temp)\n",
+    "ax[0].set_title(\"RCR\")\n",
+    "ax[0].set_ylabel('cos(theta) [adm]')\n",
+    "ax[0].set_xlabel('phi [DEG]')\n",
+    "# fig.colorbar(cs1, extend='both', shrink=0.9, ax=ax[0][0])\n",
+    "ax[0].set_aspect(aspect)\n",
+    "\n",
+    "cs2=ax[1].contourf(phiM,cosM,MFPAD_RCL_sum.T,cmap=cmap_temp)\n",
+    "ax[1].set_title(\"SCR_flip\")\n",
+    "ax[1].set_ylabel('cos(theta) [adm]')\n",
+    "ax[1].set_xlabel('phi [DEG]')\n",
+    "# fig.colorbar(cs2,extend='both', shrink=0.9, ax=ax[0][1])\n",
+    "ax[1].set_aspect(aspect)\n",
+    "\n",
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/total_MFPAD_sum_R_test_\"+CH+\"_\"+en+\"_exp.png\", figsize=(50, 24), dpi=144, transparent=False)"
    ]
   },
   {
@@ -1048,7 +1028,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "if fileSCL and fileSCR is not None:\n",
+    "    fig,ax= plt.subplots(1, figsize=(12, 10))\n",
+    "    cs=ax.contourf(phiM,cosM,mPECD_hires.T, cmap=cmap_temp, levels=10)\n",
+    "    ax.set_title(\"contrast map \"+CH+\"_\"+en)\n",
+    "\n",
+    "    aspect=(phiM.max()/cosM.max())\n",
+    "    ax.set_xlabel('phi [DEG]')\n",
+    "    ax.set_ylabel('cos(theta) [adm]')\n",
+    "    cbar = fig.colorbar(cs,extend='both',shrink=0.9, ax=ax)\n",
+    "    # cbar.set_ticklabels([\"min\",\"max\"])\n",
+    "    # cbar.set_ticks([totMFPAD.min(),totMFPAD.max()])\n",
+    "    cbar.ax.set_ylabel('% of asymmetry')\n",
+    "    ax.set_aspect(aspect)\n",
+    "\n",
+    "    fig.savefig(\"../PYTHON_graphs/OUTPUTS/contrastmap_singlesum_highres_\"+CH+\"_\"+en+\"_exp.png\", figsize=(50, 24), dpi=144,  transparent=False)"
+   ]
   }
  ],
  "metadata": {
