--- a/diatomic_ENSCAN.ipynb
+++ b/diatomic_ENSCAN.ipynb
@@ -48,14 +48,15 @@
     "PATH_CH = [\"angular_distr_el/CH11-2-3_m2x-m29/\",\"angular_distr_el/CH9-10_m1x-m42/\"]\n",
     "DIR = [\"map_AVG_ph_En/\",\"map_ScanEn_SHORT/\",\"map_ScanEn_LONG/\"]\n",
     "EN = [\"NO_gate/\",\"700/\",\"350/\",\"20/\"]\n",
-    "# L or R\n",
+    "EN_opt = 1\n",
+    "# the next layer is L or R, selected later\n",
     "ID_AVG=[\"PECD_el(theta)\",\"PECD_el(theta)_redPHI\"]\n",
     "ID_SHORT=[\"cos(theta)_vs_pEn\",\"cos(theta)_vs_pEn_pol\",\"cos(theta)_vs_pEn_redPHI\",\"cos(theta)_vs_pEn_pol_redPHI\"]\n",
     "ID_PECD=[\"PECD_el(theta)_@534.5eV_MINUS\",\"PECD_el(theta)_@535.5eV_PLUS\",\"PECD_el(theta)_@534.5eV_MINUS_redPHI\",\"PECD_el(theta)_@535.5eV_PLUS_redPHI\"]\n",
     "\n",
-    "loc_avg=PATH_CH[0]+DIR[0]+EN[0]\n",
-    "loc_short=PATH_CH[0]+DIR[1]+EN[0]\n",
-    "loc_long=PATH_CH[0]+DIR[2]+EN[0]"
+    "loc_avg=PATH_CH[0]+DIR[0]+EN[EN_opt]\n",
+    "loc_short=PATH_CH[0]+DIR[1]+EN[EN_opt]\n",
+    "loc_long=PATH_CH[0]+DIR[2]+EN[EN_opt]"
    ]
   },
   {
@@ -64,6 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#commands for uproot single graphs loading\n",
     "fileR[loc_short+\"R/\"+ID_SHORT[0]].all_members\n",
     "# fileR[loc_short+\"R/\"+ID_SHORT[0]].member(\"fXaxis\") #just the object\n",
     "fileR[loc_short+\"R/\"+ID_SHORT[0]].axis(\"x\").centers() #N\n",
@@ -77,19 +79,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#load single graphs\n",
-    "en=fileR[loc_short+\"R/\"+ID_SHORT[0]].axis(\"x\").centers() #N\n",
-    "ctheta=fileR[loc_short+\"R/\"+ID_SHORT[0]].axis(\"y\").centers() #N\n",
+    "#cos(theta) vs energy\n",
+    "ID_sel=1 #0 normal, 1 pol plane, 2 redpphi, 3 redphipolplane\n",
+    "en=fileR[loc_short+\"R/\"+ID_SHORT[ID_sel]].axis(\"x\").centers() #N\n",
+    "ctheta=fileR[loc_short+\"R/\"+ID_SHORT[ID_sel]].axis(\"y\").centers() #N\n",
     "\n",
-    "cthetaEN_R=fileR[loc_short+\"R/\"+ID_SHORT[0]].to_numpy()[0]\n",
-    "cthetaEN_R_err=fileR[loc_short+\"R/\"+ID_SHORT[0]].errors() #to be normalised too\n",
+    "cthetaEN_R=fileR[loc_short+\"R/\"+ID_SHORT[ID_sel]].to_numpy()[0]\n",
+    "cthetaEN_R_err=fileR[loc_short+\"R/\"+ID_SHORT[ID_sel]].errors() #to be normalised too\n",
     "cthetaEN_R_norm,cthetaEN_R_err_norm=fugi.normalise_with_err(cthetaEN_R,cthetaEN_R_err,normtype=0)\n",
     "\n",
-    "cthetaEN_L=fileR[loc_short+\"L/\"+ID_SHORT[0]].to_numpy()[0]\n",
-    "cthetaEN_L_err=fileR[loc_short+\"L/\"+ID_SHORT[0]].errors() #to be normalised too\n",
+    "cthetaEN_L=fileR[loc_short+\"L/\"+ID_SHORT[ID_sel]].to_numpy()[0]\n",
+    "cthetaEN_L_err=fileR[loc_short+\"L/\"+ID_SHORT[ID_sel]].errors() #to be normalised too\n",
     "cthetaEN_L_norm,cthetaEN_L_err_norm=fugi.normalise_with_err(cthetaEN_L,cthetaEN_L_err,normtype=0)\n",
     "\n",
-    "print(cthetaEN_R.shape)"
+    "print(cthetaEN_R.shape)\n",
+    "print(ctheta.shape)\n",
+    "print(en.shape)"
    ]
   },
   {
@@ -109,10 +114,78 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#534-535eV classic PECD diatomic\n",
+    "# standard 0-1\n",
+    "# redPHI 2-3\n",
+    "cbeta=fileR[loc_long+\"R/\"+ID_PECD[2]].axis(\"x\").centers() #N\n",
+    "cthetaM=fileR[loc_long+\"R/\"+ID_PECD[2]].axis(\"y\").centers() #N\n",
+    "\n",
+    "MFPAD_534_R=fileR[loc_long+\"R/\"+ID_PECD[2]].to_numpy()[0]\n",
+    "MFPAD_534_R_err=fileR[loc_long+\"R/\"+ID_PECD[2]].errors() #to be normalised too\n",
+    "MFPAD_534_R_norm,MFPAD_534_R_err_norm=fugi.normalise_with_err(MFPAD_534_R,MFPAD_534_R_err,normtype=0)\n",
+    "ctheta_534_R=np.sum(MFPAD_534_R, axis=1)\n",
+    "ctheta_534_R_err=np.sum(MFPAD_534_R_err, axis=1)\n",
+    "ctheta_534_R_norm, ctheta_534_R_norm_err = fugi.normalise_with_err(ctheta_534_R,ctheta_534_R_err)\n",
+    "\n",
+    "\n",
+    "MFPAD_535_R=fileR[loc_long+\"R/\"+ID_PECD[3]].to_numpy()[0]\n",
+    "MFPAD_535_R_err=fileR[loc_long+\"R/\"+ID_PECD[3]].errors() #to be normalised too\n",
+    "MFPAD_535_R_norm,MFPAD_535_R_err_norm=fugi.normalise_with_err(MFPAD_535_R,MFPAD_535_R_err,normtype=0)\n",
+    "ctheta_535_R=np.sum(MFPAD_535_R, axis=1)\n",
+    "ctheta_535_R_err=np.sum(MFPAD_535_R_err, axis=1)\n",
+    "ctheta_535_R_norm, ctheta_535_R_norm_err = fugi.normalise_with_err(ctheta_535_R,ctheta_535_R_err)\n",
+    "\n",
+    "MFPAD_534_L=fileR[loc_long+\"L/\"+ID_PECD[2]].to_numpy()[0]\n",
+    "MFPAD_534_L_err=fileR[loc_long+\"L/\"+ID_PECD[2]].errors() #to be normalised too\n",
+    "MFPAD_534_L_norm,MFPAD_534_L_err_norm=fugi.normalise_with_err(MFPAD_534_L,MFPAD_534_L_err,normtype=0)\n",
+    "ctheta_534_L=np.sum(MFPAD_534_L, axis=1)\n",
+    "ctheta_534_L_err=np.sum(MFPAD_534_L_err, axis=1)\n",
+    "ctheta_534_L_norm, ctheta_534_L_norm_err = fugi.normalise_with_err(ctheta_534_L,ctheta_534_L_err)\n",
+    "\n",
+    "MFPAD_535_L=fileR[loc_long+\"L/\"+ID_PECD[3]].to_numpy()[0]\n",
+    "MFPAD_535_L_err=fileR[loc_long+\"L/\"+ID_PECD[3]].errors() #to be normalised too\n",
+    "MFPAD_535_L_norm,MFPAD_535_L_err_norm=fugi.normalise_with_err(MFPAD_535_L,MFPAD_535_L_err,normtype=0)\n",
+    "ctheta_535_L=np.sum(MFPAD_535_L, axis=1)\n",
+    "ctheta_535_L_err=np.sum(MFPAD_535_L_err, axis=1)\n",
+    "ctheta_535_L_norm, ctheta_535_L_norm_err = fugi.normalise_with_err(ctheta_535_L,ctheta_535_L_err)\n",
+    "\n",
+    "print(MFPAD_534_R.shape)\n",
+    "print(ctheta_534_R_norm.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#PECD between two diffrent helicities\n",
+    "PECD_Auger_534 =  np.divide(np.subtract(MFPAD_534_R_norm,MFPAD_534_L_norm),np.add(MFPAD_534_R_norm,MFPAD_534_L_norm))\n",
+    "errPECD_Auger_534 = fugi.error_calc(MFPAD_534_R_norm,MFPAD_534_L_norm,MFPAD_534_R_err_norm,MFPAD_534_L_err_norm)\n",
+    "\n",
+    "PECD_Auger_535 =  np.divide(np.subtract(MFPAD_535_R_norm,MFPAD_535_L_norm),np.add(MFPAD_535_R_norm,MFPAD_535_L_norm))\n",
+    "errPECD_Auger_535 = fugi.error_calc(MFPAD_535_R_norm,MFPAD_535_L_norm,MFPAD_535_R_err_norm,MFPAD_535_L_err_norm)\n",
+    "\n",
+    "#PECD cos projection\n",
+    "cPECD_534 =  np.divide(np.subtract(ctheta_534_R_norm,ctheta_534_L_norm),np.add(ctheta_534_R_norm,ctheta_534_L_norm))\n",
+    "errcPECD_534 = fugi.error_calc(ctheta_534_R_norm,ctheta_534_L_norm,ctheta_534_R_norm_err,ctheta_534_L_norm_err)*0.1\n",
+    "\n",
+    "cPECD_535 =  np.divide(np.subtract(ctheta_535_R_norm,ctheta_535_L_norm),np.add(ctheta_535_R_norm,ctheta_535_L_norm))\n",
+    "errcPECD_535 = fugi.error_calc(ctheta_535_R_norm,ctheta_535_L_norm,ctheta_535_R_norm_err,ctheta_535_L_norm_err)*0.1\n",
+    "#NOTE: the adjustmnet is empirical"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "fig,(ax1,ax2)= plt.subplots(1,2, figsize=(25, 10), sharey=True)\n",
+    "plt.suptitle(\"ctehta vs EN \"+EN[EN_opt])\n",
     "cs1=ax1.contourf(en[3:],ctheta,cthetaEN_R_norm[3:].T, cmap=cmap_temp, levels=15)\n",
-    "ax1.set_title(\"ctehta vs EN R\")\n",
-    "ax1.set_xlabel('en [eV]')\n",
+    "ax1.set_title(\"R enant\")\n",
+    "ax1.set_xlabel('photon en [eV]')\n",
     "ax1.set_ylabel('cos(theta) [adm]')\n",
     "# ax1.set_aspect(aspect)\n",
     "cbar1=fig.colorbar(cs1,extend='both', shrink=0.9, ax=ax1)\n",
@@ -121,8 +194,8 @@
     "\n",
     "\n",
     "cs2=ax2.contourf(en[3:],ctheta,cthetaEN_L_norm[3:].T, cmap=cmap_temp, levels=15)\n",
-    "ax2.set_title(\"ctehta vs EN L\")\n",
-    "ax2.set_xlabel('en [eV]')\n",
+    "ax2.set_title(\"L enant\")\n",
+    "ax2.set_xlabel('photon en [eV]')\n",
     "ax2.set_ylabel('cos(theta) [adm]')\n",
     "# ax2.set_aspect(aspect)\n",
     "cbar2=fig.colorbar(cs2,extend='both', shrink=0.9, ax=ax2)\n",
@@ -138,19 +211,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
     "cs=ax.contourf(en[3:],ctheta,cPECD_en.T, cmap=cmap_temp, levels=20)\n",
-    "ax.set_title(\"PECD vs energy\")\n",
+    "ax.set_title(\"PECD vs energy \"+EN[EN_opt])\n",
     "# aspect=(phiM.max()/cosM.max())\n",
-    "ax.set_xlabel('phi [DEG]')\n",
+    "ax.set_xlabel('photon en [eV]')\n",
     "ax.set_ylabel('cos(theta) [adm]')\n",
     "cbar = fig.colorbar(cs,extend='both',shrink=0.9, ax=ax)\n",
     "# cbar.set_ticklabels([\"min\",\"max\"])\n",
@@ -192,8 +258,7 @@
     "\n",
     "param_matrix_cos=np.array(param_matrix_cos) #numpy tranformation!!!\n",
     "\n",
-    "fugi.overlaygraph(fig,wspace=0.08, hspace=0.08)\n",
-    "# fig.savefig(\"../PYTHON_graphs/OUTPUTS/b1matrix_S_CR-CL_cos_\"+CH+\"_\"+en+\"_exp.png\", figsize=(50, 24), dpi=144, transparent=False)\n",
+    "# fugi.overlaygraph(fig,wspace=0.08, hspace=0.08)\n",
     "plt.show() "
    ]
   },
@@ -203,7 +268,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.scatter(en[3:],param_matrix_cos[:,0,0])\n"
+    "fig,(ax1,ax2)= plt.subplots(1,2, figsize=(25, 10))\n",
+    "plt.suptitle(\"b1 and b2 vs photon energy \"+EN[EN_opt])\n",
+    "ax1.scatter(en[3:],param_matrix_cos[:,0,0])\n",
+    "ax1.errorbar(en[3:],param_matrix_cos[:,0,0], param_matrix_cos[:,0,1], fmt=\"o\")\n",
+    "ax1.axhline(y=0, color='k', linestyle='--', alpha=0.7)\n",
+    "ax1.set_xlabel('en [eV]')\n",
+    "ax1.set_ylabel('b1 [adm]')\n",
+    "# ax1.set_aspect(aspect)\n",
+    "\n",
+    "ax2.scatter(en[3:],param_matrix_cos[:,1,0])\n",
+    "ax2.errorbar(en[3:],param_matrix_cos[:,1,0], param_matrix_cos[:,1,1], fmt=\"o\")\n",
+    "ax2.axhline(y=-1, color='r', linestyle='--', alpha=0.7)\n",
+    "ax2.axhline(y=2, color='r', linestyle='--', alpha=0.7)\n",
+    "ax2.set_xlabel('en [eV]')\n",
+    "ax2.set_ylabel('b2 [adm]')\n",
+    "# ax2.set_aspect(aspect)\n",
+    "\n",
+    "# fig.savefig(\"../PYTHON_graphs/OUTPUTS/RCX_MFPAD_norm0_comparison_\"+CH+\"_\"+en+\"_exp.png\", figsize=(50, 24), dpi=144, transparent=False)\n",
+    "# plt.show()"
    ]
   },
   {
@@ -212,28 +295,177 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig,(ax1,ax2)= plt.subplots(1,2, figsize=(25, 10), sharey=True)\n",
-    "cs1=ax1.scatter(en[3:],ctheta,param_matrix_cos[:,0,0], cmap=cmap_temp, levels=15)\n",
-    "ax1.set_title(\"ctehta vs EN R\")\n",
-    "ax1.set_xlabel('en [eV]')\n",
-    "ax1.set_ylabel('cos(theta) [adm]')\n",
-    "# ax1.set_aspect(aspect)\n",
-    "cbar1=fig.colorbar(cs1,extend='both', shrink=0.9, ax=ax1)\n",
-    "cbar1.set_ticklabels([\"min\",\"max\"])\n",
-    "cbar1.set_ticks([cthetaEN_R_norm[3:].min(),cthetaEN_R_norm[3:].max()])\n",
+    "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
+    "cs=ax.contourf(cbeta,ctheta,PECD_Auger_534.T, cmap=cmap_temp, levels=20)\n",
+    "ax.set_title(\"Contrast map 534 eV \"+EN[EN_opt])\n",
+    "# aspect=(phiM.max()/cosM.max())\n",
+    "ax.set_xlabel('cos(beta) [adm]')\n",
+    "ax.set_ylabel('cos(theta) [adm]')\n",
+    "cbar = fig.colorbar(cs,extend='both',shrink=0.9, ax=ax)\n",
+    "cbar.ax.set_ylabel('% of asymmetry')\n",
+    "# ax.set_aspect(aspect)\n",
+    "# fig.savefig(\"../PYTHON_graphs/OUTPUTS/SCR_MFPAD_singleNONORM_\"+CH+\"_\"+en+\"_exp.png\", figsize=(50, 24), dpi=144, transparent=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#INTESNITY OF THE COS(THETA)\n",
+    "import functions_minuit as fumi\n",
     "\n",
+    "fig, ax = plt.subplots()\n",
+    "custom_xlim = (-1, 1)\n",
+    "    \n",
+    "limits=[(None, None), (-1, 1), (-1, 2)]\n",
     "\n",
-    "cs2=ax2.contourf(en[3:],ctheta,cthetaEN_L_norm[3:].T, cmap=cmap_temp, levels=15)\n",
-    "ax2.set_title(\"ctehta vs EN L\")\n",
-    "ax2.set_xlabel('en [eV]')\n",
-    "ax2.set_ylabel('cos(theta) [adm]')\n",
-    "# ax2.set_aspect(aspect)\n",
-    "cbar2=fig.colorbar(cs2,extend='both', shrink=0.9, ax=ax2)\n",
-    "cbar2.set_ticklabels([\"min\",\"max\"])\n",
-    "cbar2.set_ticks([cthetaEN_L_norm[3:].min(),cthetaEN_L_norm[3:].max()])\n",
+    "x_data = cthetaM;y_data = ctheta_534_R;y_err = ctheta_534_R_err\n",
     "\n",
-    "# fig.savefig(\"../PYTHON_graphs/OUTPUTS/RCX_MFPAD_norm0_comparison_\"+CH+\"_\"+en+\"_exp.png\", figsize=(50, 24), dpi=144, transparent=False)\n",
-    "# plt.show()"
+    "m=fumi.iminuit_err_cos(x_data,y_data,y_err,limits)\n",
+    "fumi.plotminuit_cos(x_data,y_data,y_err,m,ax,custom_xlim)\n",
+    "ax.set_title(\"Intensity c(theta) R \"+EN[EN_opt])\n",
+    "ax.set_xlabel('cos(theta) [adm]')\n",
+    "ax.set_ylabel('counts')\n",
+    "\n",
+    "fit_info = []\n",
+    "for p, v, e in zip(m.parameters, m.values, m.errors):\n",
+    "    fit_info.append(f\"{p} = ${v:.3f} \\\\pm {e:.3f}$\")\n",
+    "\n",
+    "ax.legend(title=\"\\n\".join(fit_info), loc=\"best\")\n",
+    "\n",
+    "# aspect=(custom_xlim[1]/custom_ylim[1])\n",
+    "# ax.set_aspect(aspect)\n",
+    "\n",
+    "m\n",
+    "# fig.savefig(\"../PYTHON_graphs/OUTPUTS/Diatomic/cos(th)x_combi_\"+CH+\"_\"+en+\"_exp.png\", figsize=(12, 10), dpi=144, transparent=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#PECD INTERPOLATION RANDOM\n",
+    "fig, ax = plt.subplots()\n",
+    "custom_xlim = (-1, 1)\n",
+    "custom_ylim = (-0.05, 0.05)\n",
+    "    \n",
+    "# limits=[(-1, 1), (-1, 1),(-1, 1), (-1, 1),(-1, 1), (-1, 1)] #PECD6\n",
+    "limits=[(-1, 1), (-1, 2)] #PECD2\n",
+    "\n",
+    "x_data = cthetaM;y_data = cPECD_534;y_err = errcPECD_534\n",
+    "\n",
+    "m=fumi.iminuit_err2(x_data,y_data,y_err,limits)\n",
+    "fumi.plotminuit2(x_data,y_data,y_err,m,ax,custom_xlim, ylim=custom_ylim)\n",
+    "\n",
+    "ax.set_title(\"PECD random \")\n",
+    "ax.set_xlabel('cos(theta) [adm]')\n",
+    "ax.set_ylabel('PECD %')\n",
+    "\n",
+    "fit_info = []\n",
+    "for p, v, e in zip(m.parameters, m.values, m.errors):\n",
+    "    fit_info.append(f\"{p} = ${v:.3f} \\\\pm {e:.3f}$\")\n",
+    "\n",
+    "ax.legend(title=\"\\n\".join(fit_info), loc=\"best\")\n",
+    "\n",
+    "aspect=(custom_xlim[1]/custom_ylim[1])\n",
+    "ax.set_aspect(aspect)\n",
+    "\n",
+    "m\n",
+    "# fig.savefig(\"../PYTHON_graphs/OUTPUTS/Diatomic/PECD_random_\"+CH+\"_\"+en+\"_exp.png\", figsize=(12, 10), dpi=144, transparent=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
+    "cs=ax.contourf(cbeta,cthetaM,PECD_Auger_535.T, cmap=cmap_temp, levels=20)\n",
+    "ax.set_title(\"Contrast map 535 eV \"+EN[EN_opt])\n",
+    "# aspect=(phiM.max()/cosM.max())\n",
+    "ax.set_xlabel('cos(beta) [adm]')\n",
+    "ax.set_ylabel('cos(theta) [adm]')\n",
+    "cbar = fig.colorbar(cs,extend='both',shrink=0.9, ax=ax)\n",
+    "cbar.ax.set_ylabel('% of asymmetry')\n",
+    "# ax.set_aspect(aspect)\n",
+    "# fig.savefig(\"../PYTHON_graphs/OUTPUTS/SCR_MFPAD_singleNONORM_\"+CH+\"_\"+en+\"_exp.png\", figsize=(50, 24), dpi=144, transparent=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#INTESNITY OF THE COS(THETA)\n",
+    "#COMBINED ELLICITIES\n",
+    "import functions_minuit as fumi\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "custom_xlim = (-1, 1)\n",
+    "    \n",
+    "limits=[(None, None), (-1, 1), (-1, 2)]\n",
+    "\n",
+    "x_data = cthetaM;y_data = ctheta_535_R;y_err = ctheta_535_R_err\n",
+    "\n",
+    "m=fumi.iminuit_err_cos(x_data,y_data,y_err,limits)\n",
+    "fumi.plotminuit_cos(x_data,y_data,y_err,m,ax,custom_xlim)\n",
+    "# ax.set_title(\"Intensity c(theta) combi \"+CH+\" \"+en)\n",
+    "ax.set_xlabel('cos(theta) [adm]')\n",
+    "ax.set_ylabel('normalised counts')\n",
+    "\n",
+    "fit_info = []\n",
+    "for p, v, e in zip(m.parameters, m.values, m.errors):\n",
+    "    fit_info.append(f\"{p} = ${v:.3f} \\\\pm {e:.3f}$\")\n",
+    "\n",
+    "ax.legend(title=\"\\n\".join(fit_info), loc=\"best\")\n",
+    "\n",
+    "# aspect=(custom_xlim[1]/custom_ylim[1])\n",
+    "# ax.set_aspect(aspect)\n",
+    "\n",
+    "m\n",
+    "# fig.savefig(\"../PYTHON_graphs/OUTPUTS/Diatomic/cos(th)x_combi_\"+CH+\"_\"+en+\"_exp.png\", figsize=(12, 10), dpi=144, transparent=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#PECD INTERPOLATION RANDOM\n",
+    "fig, ax = plt.subplots()\n",
+    "custom_xlim = (-1, 1)\n",
+    "custom_ylim = (-0.05, 0.05)\n",
+    "    \n",
+    "# limits=[(-1, 1), (-1, 1),(-1, 1), (-1, 1),(-1, 1), (-1, 1)] #PECD6\n",
+    "limits=[(-1, 1), (-1, 2)] #PECD2\n",
+    "\n",
+    "x_data = cthetaM;y_data = cPECD_535;y_err = errcPECD_535\n",
+    "\n",
+    "m=fumi.iminuit_err2(x_data,y_data,y_err,limits)\n",
+    "fumi.plotminuit2(x_data,y_data,y_err,m,ax,custom_xlim, ylim=custom_ylim)\n",
+    "\n",
+    "ax.set_title(\"PECD random \")\n",
+    "ax.set_xlabel('cos(theta) [adm]')\n",
+    "ax.set_ylabel('PECD %')\n",
+    "\n",
+    "fit_info = []\n",
+    "for p, v, e in zip(m.parameters, m.values, m.errors):\n",
+    "    fit_info.append(f\"{p} = ${v:.3f} \\\\pm {e:.3f}$\")\n",
+    "\n",
+    "ax.legend(title=\"\\n\".join(fit_info), loc=\"best\")\n",
+    "\n",
+    "aspect=(custom_xlim[1]/custom_ylim[1])\n",
+    "ax.set_aspect(aspect)\n",
+    "\n",
+    "m\n",
+    "# fig.savefig(\"../PYTHON_graphs/OUTPUTS/Diatomic/PECD_random_\"+CH+\"_\"+en+\"_exp.png\", figsize=(12, 10), dpi=144, transparent=False)"
    ]
   },
   {
