--- a/diatomic_ENSCAN.ipynb
+++ b/diatomic_ENSCAN.ipynb
@@ -44,19 +44,19 @@
     "#to see which classes have been defined so far\n",
     "[modname for importer, modname, ispkg in pkgutil.walk_packages(uproot_methods.classes.__path__)]\n",
     "\n",
-    "fileR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R_enant_scan25step.root\")\n",
-    "fileS = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/S_enant_scan35step.root\")\n",
+    "fileR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R_enant_scan25step_moire.root\")\n",
+    "fileS = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/S_enant_scan35step_moire.root\")\n",
     "\n",
     "PATH_CH = [\"angular_distr_el/CH11-2-3_m2x-m29/\",\"angular_distr_el/CH9-10_m1x-m42/\"]\n",
     "DIR = [\"map_AVG_ph_En/\",\"map_ScanEn_SHORT/\",\"map_ScanEn_LONG/\"]\n",
     "EN = [\"NO_gate\",\"700\",\"350\",\"20\"]\n",
-    "EN_opt = 1\n",
+    "EN_opt = 2\n",
     "# the next layer is L or R, selected later\n",
     "ID_AVG=[\"PECD_el(theta)\",\"PECD_el(theta)_redPHI\"]\n",
     "ID_SHORT=[\"cos(theta)_vs_pEn\",\"cos(theta)_vs_pEn_pol\",\"cos(theta)_vs_pEn_redPHI\",\"cos(theta)_vs_pEn_pol_redPHI\"]\n",
     "ID_PECD=[\"PECD_el(theta)_@533eV_MINUS\",\"PECD_el(theta)_@534eV_PLUS\",\"PECD_el(theta)_@533eV_MINUS_redPHI\",\"PECD_el(theta)_@534eV_PLUS_redPHI\"]\n",
     "\n",
-    "#bonth nenatiomer (different en length)\n",
+    "#both ennatiomer (different en length)\n",
     "loc_avg=PATH_CH[0]+DIR[0]+EN[EN_opt]+\"/\"\n",
     "#R enatiomer ph. en. 25 bins\n",
     "loc_short=PATH_CH[0]+DIR[1]+EN[EN_opt]+\"/\"\n",
@@ -285,7 +285,7 @@
    "outputs": [],
    "source": [
     "fig,(ax1,ax2)= plt.subplots(1,2, figsize=(25, 10), sharey=True)\n",
-    "plt.suptitle(\"cos(tehta) R enat. vs ph. en. @ el. en. \"+EN[EN_opt]+\" eV\")\n",
+    "plt.suptitle(\"cos(tehta) R enat. vs ph. en. @ el. en. 25 steps \"+EN[EN_opt]+\" eV\")\n",
     "cs1=ax1.contourf(Ren[1:],ctheta,RcthetaEN_R_norm[1:].T, cmap=cmap_temp, levels=15)\n",
     "ax1.set_title(\"CR pol.\")\n",
     "ax1.set_xlabel('photon en [eV]')\n",
@@ -305,7 +305,7 @@
     "cbar2.set_ticklabels([\"min\",\"max\"])\n",
     "cbar2.set_ticks([RcthetaEN_L_norm[1:].min(),RcthetaEN_L_norm[1:].max()])\n",
     "\n",
-    "# fig.savefig(\"../PYTHON_graphs/OUTPUTS/RCX_MFPAD_norm0_comparison_\"+CH+\"_\"+en+\"_exp.png\", figsize=(50, 24), dpi=144, transparent=False)\n",
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Auger/enscan_\"+EN[EN_opt]+\"eV_norm_cos(theta)_R_CL-CR.png\", dpi=144, transparent=False)\n",
     "# plt.show()"
    ]
   },
@@ -316,7 +316,7 @@
    "outputs": [],
    "source": [
     "fig,(ax1,ax2)= plt.subplots(1,2, figsize=(25, 10), sharey=True)\n",
-    "plt.suptitle(\"cos(tehta) S enat. vs ph. en. @ el. en. \"+EN[EN_opt]+\" eV\")\n",
+    "plt.suptitle(\"cos(tehta) S enat. vs ph. en. @ el. en. 35 steps \"+EN[EN_opt]+\" eV\")\n",
     "cs1=ax1.contourf(Sen[1:],ctheta,ScthetaEN_R_norm[1:].T, cmap=cmap_temp, levels=15)\n",
     "ax1.set_title(\"CR pol.\")\n",
     "ax1.set_xlabel('photon en [eV]')\n",
@@ -336,7 +336,7 @@
     "cbar2.set_ticklabels([\"min\",\"max\"])\n",
     "cbar2.set_ticks([ScthetaEN_L_norm[1:].min(),ScthetaEN_L_norm[1:].max()])\n",
     "\n",
-    "# fig.savefig(\"../PYTHON_graphs/OUTPUTS/RCX_MFPAD_norm0_comparison_\"+CH+\"_\"+en+\"_exp.png\", figsize=(50, 24), dpi=144, transparent=False)\n",
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Auger/enscan_\"+EN[EN_opt]+\"eV_norm_cos(theta)_S_CL-CR.png\", dpi=144, transparent=False)\n",
     "# plt.show()"
    ]
   },
@@ -357,7 +357,7 @@
     "# cbar.set_ticks([cPECD_en.min(),cPECD_en.max()])\n",
     "cbar.ax.set_ylabel('% of asymmetry')\n",
     "# ax.set_aspect(aspect)\n",
-    "# fig.savefig(\"../PYTHON_graphs/OUTPUTS/SCR_MFPAD_singleNONORM_\"+CH+\"_\"+en+\"_exp.png\", figsize=(50, 24), dpi=144, transparent=False)"
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Auger/enscan_\"+EN[EN_opt]+\"eV_norm_PECDmap_R.png\", dpi=144, transparent=False)\n"
    ]
   },
   {
@@ -377,7 +377,8 @@
     "# cbar.set_ticks([cPECD_en.min(),cPECD_en.max()])\n",
     "cbar.ax.set_ylabel('% of asymmetry')\n",
     "# ax.set_aspect(aspect)\n",
-    "# fig.savefig(\"../PYTHON_graphs/OUTPUTS/SCR_MFPAD_singleNONORM_\"+CH+\"_\"+en+\"_exp.png\", figsize=(50, 24), dpi=144, transparent=False)"
+    "\n",
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Auger/enscan_\"+EN[EN_opt]+\"eV_norm_PECDmap_S.png\", dpi=144, transparent=False)"
    ]
   },
   {
@@ -410,6 +411,7 @@
     "        param_matrix_R[i][counter]=((m.values[el], m.errors[el]))\n",
     "\n",
     "param_matrix_R=np.array(param_matrix_R) #numpy tranformation!!!\n",
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Auger/enscan_\"+EN[EN_opt]+\"eV_norm_6slices_b1b2_R.png\", dpi=144, transparent=False)\n",
     "\n",
     "# fugi.overlaygraph(fig,wspace=0.08, hspace=0.08)\n",
     "plt.show() "
@@ -422,11 +424,12 @@
    "outputs": [],
    "source": [
     "fig,(ax1,ax2)= plt.subplots(1,2, figsize=(25, 10))\n",
-    "plt.suptitle(\"b1 and b2 R enant. vs ph. energy @ \"+EN[EN_opt]+\" eV\")\n",
+    "plt.suptitle(\"PECD 6 b1 and b2 R enant. vs ph. energy @ \"+EN[EN_opt]+\" eV\")\n",
     "ax1.scatter(Ren[1:],param_matrix_R[:,0,0])\n",
     "ax1.errorbar(Ren[1:],param_matrix_R[:,0,0], param_matrix_R[:,0,1], fmt=\"o\")\n",
     "ax1.axhline(y=0, color='k', linestyle='--', alpha=0.7)\n",
     "ax1.set_xlabel('ph. ennergy [eV]')\n",
+    "ax1.set_ylim(-0.15,0.15)\n",
     "ax1.set_ylabel('b1 [adm]')\n",
     "# ax1.set_aspect(aspect)\n",
     "\n",
@@ -438,7 +441,7 @@
     "ax2.set_ylabel('b2 [adm]')\n",
     "# ax2.set_aspect(aspect)\n",
     "\n",
-    "# fig.savefig(\"../PYTHON_graphs/OUTPUTS/RCX_MFPAD_norm0_comparison_\"+CH+\"_\"+en+\"_exp.png\", figsize=(50, 24), dpi=144, transparent=False)\n",
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Auger/enscan_\"+EN[EN_opt]+\"eV_norm_6_b1b2_R.png\", dpi=144, transparent=False)\n",
     "# plt.show()"
    ]
   },
@@ -451,7 +454,70 @@
     "import functions_minuit as fumi\n",
     "#NOTE adjust the subplot according to the len(en)!\n",
     "# alternative nparray initialization\n",
-    "param_matrix_S = [[0 for i in range(6)] for j in range(len(ScPECD_en))] #i col, j row\n",
+    "param_matrix_R = [[0 for i in range(2)] for j in range(len(RcPECD_en))] #i col, j row\n",
+    "\n",
+    "# fig, axes = plt.subplots(4,6, figsize=(50, 24), constrained_layout=True, sharex=True , sharey=True)\n",
+    "fig, axes = plt.subplots(4,6, figsize=(25, 12), constrained_layout=True, sharex=True , sharey=True)\n",
+    "custom_xlim = (-1, 1)\n",
+    "custom_ylim = (-0.2,0.2) #custom_ylim = (-1,1)\n",
+    "\n",
+    "limits=[(-1, 1), (-1, 2)]\n",
+    "\n",
+    "for i,el,el_err,ax in zip(range(len(RcPECD_en)),RcPECD_en,RerrcPECD_en,axes.flatten()): #fixe because of the photon directions, equal to range(len(cosphi))\n",
+    "    \n",
+    "    x_data = ctheta;y_data = el;y_err = el_err\n",
+    "    \n",
+    "    m=fumi.iminuit_err2(x_data,y_data,y_err,limits)\n",
+    "    fumi.plotminuit2(x_data,y_data,y_err,m,ax,custom_xlim,custom_ylim)\n",
+    "\n",
+    "    for counter,el in enumerate(m.parameters): # len = 6\n",
+    "        param_matrix_R[i][counter]=((m.values[el], m.errors[el]))\n",
+    "\n",
+    "param_matrix_R=np.array(param_matrix_R) #numpy tranformation!!!\n",
+    "\n",
+    "# fugi.overlaygraph(fig,wspace=0.08, hspace=0.08)\n",
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Auger/enscan_\"+EN[EN_opt]+\"eV_norm_2slices_b1b2_R.png\", dpi=144, transparent=False)\n",
+    "plt.show() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig,(ax1,ax2)= plt.subplots(1,2, figsize=(25, 10))\n",
+    "plt.suptitle(\"b1 and b2 R enant. vs ph. energy 25 steps @ \"+EN[EN_opt]+\" eV\")\n",
+    "ax1.scatter(Ren[1:],param_matrix_R[:,0,0])\n",
+    "ax1.errorbar(Ren[1:],param_matrix_R[:,0,0], param_matrix_R[:,0,1], fmt=\"o\")\n",
+    "ax1.axhline(y=0, color='k', linestyle='--', alpha=0.7)\n",
+    "ax1.set_xlabel('ph. ennergy [eV]')\n",
+    "ax1.set_ylim(-0.15,0.15)\n",
+    "ax1.set_ylabel('b1 [adm]')\n",
+    "# ax1.set_aspect(aspect)\n",
+    "\n",
+    "ax2.scatter(Ren[1:],param_matrix_R[:,1,0])\n",
+    "ax2.errorbar(Ren[1:],param_matrix_R[:,1,0], param_matrix_R[:,1,1], fmt=\"o\")\n",
+    "ax2.axhline(y=-1, color='r', linestyle='--', alpha=0.7)\n",
+    "ax2.axhline(y=2, color='r', linestyle='--', alpha=0.7)\n",
+    "ax2.set_xlabel('ph. ennergy [eV]')\n",
+    "ax2.set_ylabel('b2 [adm]')\n",
+    "# ax2.set_aspect(aspect)\n",
+    "\n",
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Auger/enscan_\"+EN[EN_opt]+\"eV_norm_b1b2_R.png\", dpi=144, transparent=False)\n",
+    "# plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import functions_minuit as fumi\n",
+    "#NOTE adjust the subplot according to the len(en)!\n",
+    "# alternative nparray initialization\n",
+    "param_matrix_S = [[0 for i in range(2)] for j in range(len(ScPECD_en))] #i col, j row\n",
     "\n",
     "# fig, axes = plt.subplots(4,6, figsize=(50, 24), constrained_layout=True, sharex=True , sharey=True)\n",
     "# fig, axes = plt.subplots(5,7, figsize=(25, 12), constrained_layout=True, sharex=True , sharey=True)\n",
@@ -459,15 +525,16 @@
     "custom_ylim = (-0.2,0.2) #custom_ylim = (-1,1)\n",
     "\n",
     "# limits=[(-1, 1), (-1, 1), (-1, 1), (-1, 1), (-1, 1), (-1, 1)]\n",
-    "limits=[(-1, 1), (-1, 2), (None, None), (None, None), (None, None), (None, None)]\n",
+    "# limits=[(-1, 1), (-1, 2), (None, None), (None, None), (None, None), (None, None)]\n",
+    "limits=[(-1, 1), (-1, 2)]\n",
     "\n",
     "# for i,el,el_err,ax in zip(range(len(ScPECD_en)),ScPECD_en,SerrcPECD_en,axes.flatten()): #fixed because of the photon directions, equal to range(len(cosphi))\n",
     "for i,el,el_err in zip(range(len(ScPECD_en)),ScPECD_en,SerrcPECD_en): #no plotting version\n",
     "    \n",
     "    x_data = ctheta;y_data = el;y_err = el_err\n",
     "    \n",
-    "    m=fumi.iminuit_err(x_data,y_data,y_err,limits)\n",
-    "    # fumi.plotminuit(x_data,y_data,y_err,m,ax,custom_xlim,custom_ylim)\n",
+    "    m=fumi.iminuit_err2(x_data,y_data,y_err,limits)\n",
+    "    # fumi.plotminuit2(x_data,y_data,y_err,m,ax,custom_xlim,custom_ylim)\n",
     "\n",
     "    for counter,el in enumerate(m.parameters): # len = 6\n",
     "        param_matrix_S[i][counter]=((m.values[el], m.errors[el]))\n",
@@ -478,11 +545,12 @@
     "# plt.show()\n",
     "\n",
     "fig,(ax1,ax2)= plt.subplots(1,2, figsize=(25, 10))\n",
-    "plt.suptitle(\"b1 and b2 S enant. vs ph. energy @ \"+EN[EN_opt]+\" eV\")\n",
+    "plt.suptitle(\"b1 and b2 S enant. vs ph. energy 35 steps @ \"+EN[EN_opt]+\" eV\")\n",
     "ax1.scatter(Sen,param_matrix_S[:,0,0])\n",
     "ax1.errorbar(Sen,param_matrix_S[:,0,0], param_matrix_S[:,0,1], fmt=\"o\")\n",
     "ax1.axhline(y=0, color='k', linestyle='--', alpha=0.7)\n",
     "ax1.set_xlabel('ph. ennergy [eV]')\n",
+    "ax1.set_ylim(-0.15,0.15)\n",
     "ax1.set_ylabel('b1 [adm]')\n",
     "# ax1.set_aspect(aspect)\n",
     "\n",
@@ -494,7 +562,7 @@
     "ax2.set_ylabel('b2 [adm]')\n",
     "# ax2.set_aspect(aspect)\n",
     "\n",
-    "# fig.savefig(\"../PYTHON_graphs/OUTPUTS/RCX_MFPAD_norm0_comparison_\"+CH+\"_\"+en+\"_exp.png\", figsize=(50, 24), dpi=144, transparent=False)\n",
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Auger/enscan_\"+EN[EN_opt]+\"eV_norm_b1b2_S.png\", dpi=144, transparent=False)\n",
     "# plt.show()"
    ]
   },
@@ -505,15 +573,16 @@
    "outputs": [],
    "source": [
     "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
-    "cs=ax.contourf(cbeta,ctheta,RPECD_Auger_533.T, cmap=cmap_temp, levels=10)\n",
-    "ax.set_title(\"PECD map CR-CL ph. 533 eV @ \"+EN[EN_opt]+\" eV\")\n",
-    "# aspect=(phiM.max()/cosM.max())\n",
+    "cs=ax.contourf(cbeta,cthetaM,fugi.smoothgauss(RPECD_Auger_533.T,0.3,0.3), cmap=cmap_temp, levels=10)\n",
+    "ax.set_title(\"PECD map CR-CL R ph. 533 eV @ \"+EN[EN_opt]+\" eV\")\n",
+    "aspect=(cbeta.max()/cthetaM.max())\n",
     "ax.set_xlabel('cos(beta) [adm]')\n",
     "ax.set_ylabel('cos(theta) [adm]')\n",
     "cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
     "cbar.ax.set_ylabel('% of asymmetry')\n",
-    "# ax.set_aspect(aspect)\n",
-    "# fig.savefig(\"../PYTHON_graphs/OUTPUTS/SCR_MFPAD_singleNONORM_\"+CH+\"_\"+en+\"_exp.png\", figsize=(50, 24), dpi=144, transparent=False)"
+    "ax.set_aspect(aspect)\n",
+    "\n",
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Auger/ph533eV_\"+EN[EN_opt]+\"eV_norm_PECD_R.png\", dpi=144, transparent=False)"
    ]
   },
   {
@@ -584,7 +653,7 @@
     "ax.set_aspect(aspect)\n",
     "\n",
     "m\n",
-    "# fig.savefig(\"../PYTHON_graphs/OUTPUTS/Diatomic/PECD_random_\"+CH+\"_\"+en+\"_exp.png\", figsize=(12, 10), dpi=144, transparent=False)"
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Auger/ph533eV_\"+EN[EN_opt]+\"eV_norm_1DPECD_R.png\", dpi=144, transparent=False)\n"
    ]
   },
   {
@@ -594,15 +663,16 @@
    "outputs": [],
    "source": [
     "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
-    "cs=ax.contourf(cbeta,cthetaM,RPECD_Auger_534.T, cmap=cmap_temp, levels=10)\n",
+    "cs=ax.contourf(cbeta,cthetaM,fugi.smoothgauss(RPECD_Auger_534.T,0.3,0.3), cmap=cmap_temp, levels=10)\n",
     "ax.set_title(\"PECD map CR-CL R enat. ph. 534 eV @ \"+EN[EN_opt]+\" eV\")\n",
-    "# aspect=(phiM.max()/cosM.max())\n",
+    "aspect=(cbeta.max()/cthetaM.max())\n",
     "ax.set_xlabel('cos(beta) [adm]')\n",
     "ax.set_ylabel('cos(theta) [adm]')\n",
     "cbar = fig.colorbar(cs,extend='both',shrink=0.9, ax=ax)\n",
     "cbar.ax.set_ylabel('% of asymmetry')\n",
-    "# ax.set_aspect(aspect)\n",
-    "# fig.savefig(\"../PYTHON_graphs/OUTPUTS/SCR_MFPAD_singleNONORM_\"+CH+\"_\"+en+\"_exp.png\", figsize=(50, 24), dpi=144, transparent=False)"
+    "ax.set_aspect(aspect)\n",
+    "\n",
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Auger/ph534eV_\"+EN[EN_opt]+\"eV_norm_PECD_R.png\", dpi=144, transparent=False)"
    ]
   },
   {
@@ -660,7 +730,7 @@
     "m=fumi.iminuit_err2(x_data,y_data,y_err,limits)\n",
     "fumi.plotminuit2(x_data,y_data,y_err,m,ax,custom_xlim, ylim=custom_ylim)\n",
     "\n",
-    "ax.set_title(\"PECD CR-CL R enat. ph. 533 eV @ \"+EN[EN_opt]+\" eV\")\n",
+    "ax.set_title(\"PECD CR-CL R enat. ph. 534 eV @ \"+EN[EN_opt]+\" eV\")\n",
     "ax.set_xlabel('cos(theta) [adm]')\n",
     "ax.set_ylabel('PECD %')\n",
     "\n",
@@ -674,7 +744,7 @@
     "ax.set_aspect(aspect)\n",
     "\n",
     "m\n",
-    "# fig.savefig(\"../PYTHON_graphs/OUTPUTS/Diatomic/PECD_random_\"+CH+\"_\"+en+\"_exp.png\", figsize=(12, 10), dpi=144, transparent=False)"
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Auger/ph534eV_\"+EN[EN_opt]+\"eV_norm_1DPECD_R.png\", dpi=144, transparent=False)\n"
    ]
   },
   {
@@ -710,7 +780,43 @@
     "ax.set_aspect(aspect)\n",
     "\n",
     "m\n",
-    "# fig.savefig(\"../PYTHON_graphs/OUTPUTS/Diatomic/PECD_random_\"+CH+\"_\"+en+\"_exp.png\", figsize=(12, 10), dpi=144, transparent=False)"
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Auger/ph534eV_\"+EN[EN_opt]+\"eV_norm_1DPECD_R-S.png\", dpi=144, transparent=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#PECD INTERPOLATION RANDOM\n",
+    "fig, ax = plt.subplots()\n",
+    "custom_xlim = (-1, 1)\n",
+    "custom_ylim = (-0.1, 0.1)\n",
+    "    \n",
+    "# limits=[(-1, 1), (-1, 1),(-1, 1), (-1, 1),(-1, 1), (-1, 1)] #PECD6\n",
+    "limits=[(-1, 1), (-1, 2)] #PECD2\n",
+    "\n",
+    "x_data = cthetaM;y_data = cPECD_533;y_err = errcPECD_533\n",
+    "\n",
+    "m=fumi.iminuit_err2(x_data,y_data,y_err,limits)\n",
+    "fumi.plotminuit2(x_data,y_data,y_err,m,ax,custom_xlim, ylim=custom_ylim)\n",
+    "\n",
+    "ax.set_title(\"PECD R-S enat. ph. 533 eV @ \"+EN[EN_opt]+\" eV\")\n",
+    "ax.set_xlabel('cos(theta) [adm]')\n",
+    "ax.set_ylabel('PECD %')\n",
+    "\n",
+    "fit_info = []\n",
+    "for p, v, e in zip(m.parameters, m.values, m.errors):\n",
+    "    fit_info.append(f\"{p} = ${v:.3f} \\\\pm {e:.3f}$\")\n",
+    "\n",
+    "ax.legend(title=\"\\n\".join(fit_info), loc=\"best\")\n",
+    "\n",
+    "aspect=(custom_xlim[1]/custom_ylim[1])\n",
+    "ax.set_aspect(aspect)\n",
+    "\n",
+    "m\n",
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Auger/ph534eV_\"+EN[EN_opt]+\"eV_norm_1DPECD_R-S.png\", dpi=144, transparent=False)"
    ]
   },
   {
@@ -723,9 +829,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "display_name": "Python 3.8.8 64-bit ('base': conda)",
+   "name": "python388jvsc74a57bd00314860021bfd1d6d5065173ecf1d472a069bf5b92310f1daa2ee9c3af705d8c"
   },
   "language_info": {
    "codemirror_mode": {
@@ -737,7 +842,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8-final"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
