Ar first commit

--- a/lens_strength.ipynb
+++ b/lens_strength.ipynb
@@ -20,13 +20,24 @@
     "cmap_temp, cmap_temp_go, Magma_r, Seismic_r = fugi.customcmaps()\n",
     "\n",
     "\n",
-    "table = pd.read_excel('stregth_of_lenses_energy_el.xlsx',\n",
+    "table = pd.read_excel('DATA/stregth_of_lenses_energy_el.xlsx',\n",
     "                  sheet_name = 'Momentum_360NoEL',\n",
     "                  header = 11,\n",
     "                  usecols = \"B, C, G, J, Q, T\",\n",
     "                  convert_float = True)\n",
     "                #   dtype={\"B\" : float, 'tof_rand': float, 'z_rand': float, 'mom_mag_rand': float,'cos(theta)_tof_rand': float})\n",
     "table.dropna(inplace=True);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "plt.scatter(table[\"KE\"].values, table[\"TOF\"].values)\n",
+    "plt.xlim([324, 328])"
    ]
   },
   {
@@ -49,6 +60,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "second_1 = (table[\"KE\"].values > 324.5) & (table[\"KE\"].values < 325)\n",
+    "second_2 = (table[\"KE\"].values > 326) & (table[\"KE\"].values < 326.5)\n",
+    "second_3 = (table[\"KE\"].values > 327) & (table[\"KE\"].values < 327.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "fig,ax= plt.subplots(1,figsize=(15, 10))\n",
     "# plt.suptitle(\"fish\")\n",
     "ax.scatter(table.loc[first, \"TOF_200ps\"]*10**3, table.loc[first,\"Z\"], alpha=0.6)\n",
@@ -58,7 +80,45 @@
     "ax.axhline(y=0, color='black', linestyle='--', alpha=0.5)\n",
     "ax.set_xlabel('tof [ns]')\n",
     "ax.set_ylabel('y axis [mm]')\n",
-    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/lens_effect_fish.svg\", dpi=144, transparent=False)"
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/lens_effect_fish.svg\", dpi=144, transparent=False)\n",
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/lens_effect_fish.png\", dpi=144, transparent=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig,ax= plt.subplots(1,figsize=(15, 10))\n",
+    "# plt.suptitle(\"fish\")\n",
+    "ax.scatter(table.loc[second_1, \"TOF\"]*10**3, table.loc[second_1,\"Z\"], alpha=0.6)\n",
+    "ax.scatter(table.loc[second_2, \"TOF\"]*10**3, table.loc[second_2,\"Z\"], alpha=0.6)\n",
+    "ax.scatter(table.loc[second_3, \"TOF\"]*10**3, table.loc[second_3,\"Z\"], alpha=0.6)\n",
+    "ax.axhline(y=0, color='black', linestyle='--', alpha=0.5)\n",
+    "ax.set_xlabel('tof [ns]')\n",
+    "ax.set_ylabel('y axis [mm]')\n",
+    "# fig.savefig(\"../PYTHON_graphs/OUTPUTS/lens_effect_fish.svg\", dpi=144, transparent=False)\n",
+    "# fig.savefig(\"../PYTHON_graphs/OUTPUTS/lens_effect_fish.png\", dpi=144, transparent=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig,ax= plt.subplots(1,figsize=(10, 10))\n",
+    "# plt.suptitle(\"fish\")\n",
+    "# ax.scatter(table.loc[second_1,\"cos(theta)_tof.1\"], table.loc[second_1,\"mom.mag.1\"],alpha=0.6)\n",
+    "# ax.scatter(table.loc[second_2,\"cos(theta)_tof.1\"], table.loc[second_2,\"mom.mag.1\"],alpha=0.6)\n",
+    "ax.scatter(table.loc[second_3,\"cos(theta)_tof.1\"], table.loc[second_3,\"mom.mag.1\"],alpha=0.6)\n",
+    "\n",
+    "ax.set_xlabel('cos(theta) [adm]')\n",
+    "ax.set_xlim(-1.,1.)\n",
+    "ax.set_ylabel('monetum magnitude [arb]')\n",
+    "# fig.savefig(\"../PYTHON_graphs/OUTPUTS/lens_effect_cos(theta).svg\", dpi=144, transparent=False)\n",
+    "# fig.savefig(\"../PYTHON_graphs/OUTPUTS/lens_effect_cos(theta).png\", dpi=144, transparent=False)"
    ]
   },
   {
@@ -76,15 +136,9 @@
     "ax.set_xlabel('cos(theta) [adm]')\n",
     "ax.set_xlim(-1.,1.)\n",
     "ax.set_ylabel('monetum magnitude [arb]')\n",
-    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/lens_effect_cos(theta).svg\", dpi=144, transparent=False)"
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/lens_effect_cos(theta).svg\", dpi=144, transparent=False)\n",
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/lens_effect_cos(theta).png\", dpi=144, transparent=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
