introduction of energy in the costheta calculation of energy from momentum

--- a/lens_strength.ipynb
+++ b/lens_strength.ipynb
@@ -17,16 +17,20 @@
     "plt.style.use(hep.style.ROOT) # For now ROOT defaults to CMS\n",
     "\n",
     "import functions_giammi as fugi\n",
+    "import numpy as np\n",
+    "\n",
     "cmap_temp, cmap_temp_go, Magma_r, Seismic_r = fugi.customcmaps()\n",
+    "cmap_viridis = mpl.cm.get_cmap('viridis')\n",
     "\n",
     "\n",
     "table = pd.read_excel('DATA/stregth_of_lenses_energy_el.xlsx',\n",
     "                  sheet_name = 'Momentum_360NoEL',\n",
     "                  header = 11,\n",
-    "                  usecols = \"B, C, G, J, Q, T\",\n",
+    "                  usecols = \"B, C, G, J, Q, P, S, T\",\n",
     "                  convert_float = True)\n",
     "                #   dtype={\"B\" : float, 'tof_rand': float, 'z_rand': float, 'mom_mag_rand': float,'cos(theta)_tof_rand': float})\n",
-    "table.dropna(inplace=True);"
+    "table.dropna(inplace=True);\n",
+    "dir = r\"../PYTHON_graphs/OUTPUTS/lens_effect/\""
    ]
   },
   {
@@ -35,9 +39,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "plt.scatter(table[\"KE\"].values, table[\"TOF\"].values)\n",
     "plt.xlim([324, 328])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#calculate the initial KE from the momenta at the detectors\n",
+    "table[\"KE_calc_rnd\"] = table['mom.mag.1'].mul(table['mom.mag.1']).mul(10**3*27.2114/(1822.888)).to_frame('KE_calc_rnd')\n",
+    "table[\"KE_calc\"] = table['mom.mag'].mul(table['mom.mag']).mul(10**3*27.2114/(1822.888)).to_frame('KE_calc')"
    ]
   },
   {
@@ -71,17 +85,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig,ax= plt.subplots(1,figsize=(15, 10))\n",
+    "fig,ax= plt.subplots(1,figsize=(12, 10))\n",
     "# plt.suptitle(\"fish\")\n",
-    "ax.scatter(table.loc[first, \"TOF_200ps\"]*10**3, table.loc[first,\"Z\"], alpha=0.6)\n",
-    "ax.scatter(table.loc[second, \"TOF_200ps\"]*10**3, table.loc[second,\"Z\"], alpha=0.6)\n",
-    "ax.scatter(table.loc[third, \"TOF_200ps\"]*10**3, table.loc[third,\"Z\"], alpha=0.6)\n",
-    "ax.scatter(table.loc[fourth, \"TOF_200ps\"]*10**3, table.loc[fourth,\"Z\"], alpha=0.6)\n",
+    "ax.scatter(table.loc[first, \"TOF_200ps\"]*10**3, table.loc[first,\"Z\"], color= cmap_viridis(0), alpha=0.6)\n",
+    "ax.scatter(table.loc[second, \"TOF_200ps\"]*10**3, table.loc[second,\"Z\"], color= cmap_viridis(0.33), alpha=0.6)\n",
+    "ax.scatter(table.loc[third, \"TOF_200ps\"]*10**3, table.loc[third,\"Z\"], color= cmap_viridis(0.66), alpha=0.6)\n",
+    "ax.scatter(table.loc[fourth, \"TOF_200ps\"]*10**3, table.loc[fourth,\"Z\"], color= cmap_viridis(0.88), alpha=0.6)\n",
+    "\n",
+    "ax.scatter(table.loc[first, \"TOF\"]*10**3, table.loc[first,\"Z\"], color= \"black\", s= 1, alpha=0.4)\n",
+    "ax.scatter(table.loc[second, \"TOF\"]*10**3, table.loc[second,\"Z\"], color= \"black\", s= 1, alpha=0.4)\n",
+    "ax.scatter(table.loc[third, \"TOF\"]*10**3, table.loc[third,\"Z\"], color= \"black\", s= 1, alpha=0.4)\n",
+    "ax.scatter(table.loc[fourth, \"TOF\"]*10**3, table.loc[fourth,\"Z\"], color= \"black\", s= 1, alpha=0.4)\n",
+    "\n",
     "ax.axhline(y=0, color='black', linestyle='--', alpha=0.5)\n",
     "ax.set_xlabel('tof [ns]')\n",
+    "ax.set_xlim([14.75, 17.4])\n",
     "ax.set_ylabel('y axis [mm]')\n",
-    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/lens_effect_fish.svg\", dpi=144, transparent=False)\n",
-    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/lens_effect_fish.png\", dpi=144, transparent=False)"
+    "ax.set_ylim([-40, 40.])\n",
+    "ax.set_aspect(1/28)\n",
+    "ax.grid()\n",
+    "\n",
+    "fig.savefig(dir+\"lens_effect_fish.svg\", dpi=300, transparent=False)\n",
+    "fig.savefig(dir+\"lens_effect_fish.png\", dpi=300, transparent=False)"
    ]
   },
   {
@@ -98,8 +123,8 @@
     "ax.axhline(y=0, color='black', linestyle='--', alpha=0.5)\n",
     "ax.set_xlabel('tof [ns]')\n",
     "ax.set_ylabel('y axis [mm]')\n",
-    "# fig.savefig(\"../PYTHON_graphs/OUTPUTS/lens_effect_fish.svg\", dpi=144, transparent=False)\n",
-    "# fig.savefig(\"../PYTHON_graphs/OUTPUTS/lens_effect_fish.png\", dpi=144, transparent=False)"
+    "# fig.savefig(dir+\"lens_effect_fish.svg\", dpi=144, transparent=False)\n",
+    "# fig.savefig(dir+\"lens_effect_fish.png\", dpi=144, transparent=False)"
    ]
   },
   {
@@ -112,13 +137,14 @@
     "# plt.suptitle(\"fish\")\n",
     "# ax.scatter(table.loc[second_1,\"cos(theta)_tof.1\"], table.loc[second_1,\"mom.mag.1\"],alpha=0.6)\n",
     "# ax.scatter(table.loc[second_2,\"cos(theta)_tof.1\"], table.loc[second_2,\"mom.mag.1\"],alpha=0.6)\n",
-    "ax.scatter(table.loc[second_3,\"cos(theta)_tof.1\"], table.loc[second_3,\"mom.mag.1\"],alpha=0.6)\n",
+    "# ax.scatter(table.loc[second_3,\"cos(theta)_tof.1\"], table.loc[second_3,\"mom.mag.1\"],alpha=0.6)\n",
+    "ax.scatter(table.loc[second_3,\"cos(theta)_tof.1\"], table.loc[second_3,\"KE_calc\"]*10**3,alpha=0.6)\n",
     "\n",
     "ax.set_xlabel('cos(theta) [adm]')\n",
     "ax.set_xlim(-1.,1.)\n",
-    "ax.set_ylabel('monetum magnitude [arb]')\n",
-    "# fig.savefig(\"../PYTHON_graphs/OUTPUTS/lens_effect_cos(theta).svg\", dpi=144, transparent=False)\n",
-    "# fig.savefig(\"../PYTHON_graphs/OUTPUTS/lens_effect_cos(theta).png\", dpi=144, transparent=False)"
+    "ax.set_ylabel('monetum magnitude [a.u.]')\n",
+    "# fig.savefig(dir+\"lens_effect_cos(theta).svg\", dpi=144, transparent=False)\n",
+    "# fig.savefig(dir+\"lens_effect_cos(theta).png\", dpi=144, transparent=False)"
    ]
   },
   {
@@ -129,16 +155,62 @@
    "source": [
     "fig,ax= plt.subplots(1,figsize=(10, 10))\n",
     "# plt.suptitle(\"fish\")\n",
-    "ax.scatter(table.loc[first, \"cos(theta)_tof.1\"], table.loc[first,\"mom.mag.1\"],alpha=0.6)\n",
-    "ax.scatter(table.loc[second, \"cos(theta)_tof.1\"], table.loc[second,\"mom.mag.1\"],alpha=0.6)\n",
-    "ax.scatter(table.loc[third, \"cos(theta)_tof.1\"], table.loc[third,\"mom.mag.1\"],alpha=0.6)\n",
-    "ax.scatter(table.loc[fourth, \"cos(theta)_tof.1\"], table.loc[fourth,\"mom.mag.1\"],alpha=0.6)\n",
+    "ax.scatter(table.loc[first, \"cos(theta)_tof.1\"], table.loc[first,\"mom.mag.1\"], color= cmap_viridis(0), alpha=0.6)\n",
+    "ax.scatter(table.loc[second, \"cos(theta)_tof.1\"], table.loc[second,\"mom.mag.1\"],color= cmap_viridis(0.33), alpha=0.6)\n",
+    "ax.scatter(table.loc[third, \"cos(theta)_tof.1\"], table.loc[third,\"mom.mag.1\"],color= cmap_viridis(0.66), alpha=0.6)\n",
+    "ax.scatter(table.loc[fourth, \"cos(theta)_tof.1\"], table.loc[fourth,\"mom.mag.1\"],color= cmap_viridis(0.88), alpha=0.6)\n",
+    "\n",
+    "ax.scatter(table.loc[first, \"cos(theta)_tof\"], table.loc[first,\"mom.mag\"], color= \"black\", s= 1, alpha=0.4)\n",
+    "ax.scatter(table.loc[second, \"cos(theta)_tof\"], table.loc[second,\"mom.mag\"],color= \"black\", s= 1, alpha=0.4)\n",
+    "ax.scatter(table.loc[third, \"cos(theta)_tof\"], table.loc[third,\"mom.mag\"], color= \"black\", s= 1, alpha=0.4)\n",
+    "ax.scatter(table.loc[fourth, \"cos(theta)_tof\"], table.loc[fourth,\"mom.mag\"], color= \"black\", s= 1, alpha=0.4)\n",
+    "\n",
+    "\n",
     "ax.set_xlabel('cos(theta) [adm]')\n",
-    "ax.set_xlim(-1.,1.)\n",
-    "ax.set_ylabel('monetum magnitude [arb]')\n",
-    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/lens_effect_cos(theta).svg\", dpi=144, transparent=False)\n",
-    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/lens_effect_cos(theta).png\", dpi=144, transparent=False)"
+    "# ax.set_xlim(-1.,1.)\n",
+    "ax.set_xlim(-.99,.99)\n",
+    "ax.set_ylabel('monetum magnitude [a.u.]')\n",
+    "ax.grid()\n",
+    "fig.savefig(dir+\"lens_effect_cos(theta)_mom.svg\", dpi=300, transparent=False)\n",
+    "fig.savefig(dir+\"lens_effect_cos(theta)_mom.png\", dpi=300, transparent=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig,ax= plt.subplots(1,figsize=(10, 10))\n",
+    "# plt.suptitle(\"fish\")\n",
+    "ax.scatter(table.loc[first, \"cos(theta)_tof.1\"], table.loc[first,\"KE_calc_rnd\"], color= cmap_viridis(0), alpha=0.6)\n",
+    "ax.scatter(table.loc[second, \"cos(theta)_tof.1\"], table.loc[second,\"KE_calc_rnd\"],color= cmap_viridis(0.33), alpha=0.6)\n",
+    "ax.scatter(table.loc[third, \"cos(theta)_tof.1\"], table.loc[third,\"KE_calc_rnd\"],color= cmap_viridis(0.66), alpha=0.6)\n",
+    "ax.scatter(table.loc[fourth, \"cos(theta)_tof.1\"], table.loc[fourth,\"KE_calc_rnd\"],color= cmap_viridis(0.88), alpha=0.6)\n",
+    "\n",
+    "ax.scatter(table.loc[first, \"cos(theta)_tof\"], table.loc[first,\"KE_calc\"], color= \"black\", s= 1, alpha=0.4)\n",
+    "ax.scatter(table.loc[second, \"cos(theta)_tof\"], table.loc[second,\"KE_calc\"],color= \"black\", s= 1, alpha=0.4)\n",
+    "ax.scatter(table.loc[third, \"cos(theta)_tof\"], table.loc[third,\"KE_calc\"], color= \"black\", s= 1, alpha=0.4)\n",
+    "ax.scatter(table.loc[fourth, \"cos(theta)_tof\"], table.loc[fourth,\"KE_calc\"], color= \"black\", s= 1, alpha=0.4)\n",
+    "\n",
+    "\n",
+    "ax.set_xlabel('cos(theta) [adm]')\n",
+    "# ax.set_xlim(-1.,1.)\n",
+    "ax.set_xlim(-.99,.99)\n",
+    "ax.set_ylabel('kinetic energy [eV]')\n",
+    "ax.set_ylim(0.,15.)\n",
+    "\n",
+    "ax.grid()\n",
+    "# fig.savefig(dir+\"lens_effect_cos(theta)_en.svg\", dpi=300, transparent=False)\n",
+    "# fig.savefig(dir+\"lens_effect_cos(theta)_en.png\", dpi=300, transparent=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
