rename: no more distinction between two channels because one is wrong introductionof the new averaging removed figsize

--- a/72_2D_MFPADs_experiment_COPY.ipynb
+++ b/72_2D_MFPADs_experiment_COPY.ipynb
@@ -54,35 +54,35 @@
     "#to see which classes have been defined so far\n",
     "[modname for importer, modname, ispkg in pkgutil.walk_packages(uproot_methods.classes.__path__)]\n",
     "\n",
-    "###550eV - 11.5eV CH11\n",
-    "#update nov Kilian binning (36,18)\n",
-    "fileRCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_CH11_550eV_CR_Knov.root\");en=\"550eV\";CH=\"CH11\";\n",
-    "fileRCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_CH11_550eV_CL_Knov.root\")\n",
-    "fileSCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/S-C3H3F3O_CH11_550eV_CR_Knov.root\")\n",
-    "fileSCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/S-C3H3F3O_CH11_550eV_CL_Knov.root\")\n",
+    "# ##550eV - 11.5eV CH9\n",
+    "# #update nov Kilian binning (36,18)\n",
+    "# fileRCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_CH9_550eV_CR_Knov.root\");en=\"550eV\";CH=\"CH9\";\n",
+    "# fileRCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_CH9_550eV_CL_Knov.root\")\n",
+    "# fileSCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/S-C3H3F3O_CH9_550eV_CR_Knov.root\")\n",
+    "# fileSCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/S-C3H3F3O_CH9_550eV_CL_Knov.root\")\n",
     "\n",
-    "# #546eV - 8.2eV CH11\n",
-    "# fileRCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_546eV_CR_10800-2350ns_multiCH11.root\");en=\"546eV\";CH=\"CH11\";\n",
-    "# fileRCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_546eV_CL_10800-2350ns_multiCH11.root\")\n",
+    "# #546eV - 8.2eV CH9\n",
+    "# fileRCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_546eV_CR_9600-3700ns_multiCH9.root\");en=\"546eV\";CH=\"CH9\";\n",
+    "# fileRCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_546eV_CL_9600-3700ns_multiCH9.root\")\n",
     "\n",
-    "# 544eV - 6.1eV CH11\n",
-    "# fileRCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_544.5eV_CR_9600-3700ns_multiCH11.root\");en=\"544eV\";CH=\"CH11\";\n",
-    "# fileRCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_544.5eV_CL_9600-3700ns_multiCH11.root\")\n",
+    "# # 544eV - 6.1eV CH9\n",
+    "# fileRCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_544.5eV_CR_9600-3700ns_multiCH9.root\");en=\"544eV\";CH=\"CH9\";\n",
+    "# fileRCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_544.5eV_CL_9600-3700ns_multiCH9.root\")\n",
     "\n",
-    "# #542eV - 4eV CH11\n",
-    "# fileRCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_542.5eV_CR_10800-2350ns_COMBI_multiCH11.root\");en=\"542eV\";CH=\"CH11\";\n",
-    "# fileRCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_542.5eV_CL_10800-2350ns_COMBI_multiCH11.root\")\n",
+    "# # 542eV - 4eV CH9\n",
+    "# fileRCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_542.5eV_CR_9600-3700ns_COMBI_multiCH9.root\");en=\"542eV\";CH=\"CH9\";\n",
+    "# fileRCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_542.5eV_CL_9600-3700ns_COMBI_multiCH9.root\")\n",
     "\n",
-    "# #541eV 3eV CH11\n",
-    "# fileRCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_541.5eV_CR_10800-2350ns_multiCH11.root\");en=\"541eV\";CH=\"CH11\";\n",
-    "# fileRCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_541.5eV_CL_10800-2350ns_multiCH11.root\")\n",
+    "#541eV 3eV CH9\n",
+    "fileRCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_541.5eV_CR_9600-3700ns_multiCH9.root\");en=\"541eV\";CH=\"CH9\";\n",
+    "fileRCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_541.5eV_CL_9600-3700ns_multiCH9.root\")\n",
     "\n",
     "#Select between CH9 and CH11\n",
     "path = \"angular_distr_el/\"+CH+\"/\"\n",
     "\n",
     "#move first the ID you need\n",
     "IDs = [\"ID_ALL_mol_e0_valid/EN_gate/\",\"ID1_mol_e0_valid/EN_gate/\",\"ID2_mol_e0_valid/EN_gate/\",\"ID3_mol_e0_valid/EN_gate/\"]\n",
-    "dirs = [\"MFPADs_multinew\",\"MFPADs_multinew_phi\"]\n",
+    "dirs = [\"MFPADs_multinew/\",\"MFPADs_multinew_phi/\"]\n",
     "\n",
     "loc=path+IDs[0]+dirs[0]\n",
     "\n",
@@ -176,8 +176,8 @@
     "\"\"\"\n",
     "# fugi = reload(fugi)\n",
     "\n",
-    "xgo_phi,ygo_phi,cosphi_adj_phi = fugi.create_gocoords(a=0, reduced=True, source=True)\n",
-    "xgo_cos,ygo_cos,cosphi_adj_cos = fugi.create_gocoords(a=1, reduced=True, source=True)\n",
+    "xgo_phi,ygo_phi,cosphi_adj_phi = fugi.create_gocoords(a=0, reduced=False, source=True)\n",
+    "xgo_cos,ygo_cos,cosphi_adj_cos = fugi.create_gocoords(a=1, reduced=False, source=True)\n",
     "\n",
     "# list(zip(xgo_phi,ygo_phi))\n",
     "print(\"(xgo_cos (phi), ygo_cos (ctheta)) \\n\", list(zip(xgo_cos,ygo_cos))[:6])\n",
@@ -396,15 +396,11 @@
     "    #PECD check it is equal to contrast\n",
     "    mPECD = np.divide(np.subtract(MFPAD_RCLCR_sum,MFPAD_SCLCR_sum),np.add(MFPAD_RCLCR_sum,MFPAD_SCLCR_sum))\n",
     "\n",
-    "    MFPAD_tot_sum_flip=np.flip(MFPAD_tot_sum,axis=0)\n",
-    "    mPECD_hires = np.divide(np.subtract(MFPAD_tot_sum,MFPAD_tot_sum_flip),np.add(MFPAD_tot_sum,MFPAD_tot_sum_flip))\n",
-    "\n",
     "else:\n",
     "    MFPAD_totordered=MFPAD_RCLCR\n",
-    "    MFPAD_totordered_flip=np.flip(MFPAD_RCLCR,axis=0) #simulates the S enantiomer\n",
     "    MFPAD_totordered_cos=MFPAD_RCLCR_cos\n",
     "    MFPAD_totordered_phi=MFPAD_RCLCR_phi\n",
-    "    mPECD=np.divide(np.subtract(MFPAD_totordered,MFPAD_totordered_flip),np.add(MFPAD_totordered,MFPAD_totordered_flip))"
+    "    mPECD=np.divide(np.subtract(MFPAD_RCL_sum,MFPAD_RCR_sum),np.add(MFPAD_RCL_sum,MFPAD_RCR_sum))"
    ]
   },
   {
@@ -416,7 +412,7 @@
     "fig, (ax1, ax2, ax3) = plt.subplots(1, 3, figsize=(15,4))\n",
     "ax1.contourf(phiM,cosM,MFPAD_RCR[0].T)\n",
     "ax2.contourf(phiM,cosM,MFPAD_RCR_flip[0].T)\n",
-    "ax3.contourf(phiM,cosM,MFPAD_tottest)\n",
+    "ax3.contourf(phiM,cosM,MFPAD_tottest.T)\n",
     "\n",
     "# MFPAD_SCL_flip_cos[45]==np.flip(np.flip(MFPAD_SCL_cos[45],axis=1),axis=0) #True"
    ]
@@ -427,8 +423,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MFPAD_tottest\n",
-    "np.sum(MFPAD_RCRtest)"
+    "fig, (ax1, ax2, ax3) = plt.subplots(1, 3, figsize=(15,4))\n",
+    "ax1.pcolormesh(phiM,cosM,MFPAD_RCR[0].T,shading='gouraud')\n",
+    "ax2.pcolormesh(phiM,cosM,MFPAD_RCR_flip[0].T,shading='gouraud')\n",
+    "ax3.pcolormesh(phiM,cosM,MFPAD_tottest,shading='gouraud')\n",
+    "\n",
+    "# MFPAD_SCL_flip_cos[45]==np.flip(np.flip(MFPAD_SCL_cos[45],axis=1),axis=0) #True"
    ]
   },
   {
@@ -778,7 +778,7 @@
     "if fileSCL and fileSCR is not None:\n",
     "    fig,ax= plt.subplots(1, figsize=(12, 10))\n",
     "    cs=ax.contourf(phiM,cosM,fugi.normalise_matrix(MFPAD_SCL_sum,normtype=2).T, cmap=cmap_temp, levels=20)\n",
-    "    ax.set_title(\"SCL tot MFPAD n2 \"+CH+\"_\"+en)\n",
+    "    ax.set_title(\"SCR tot MFPAD n2 \"+CH+\"_\"+en)\n",
     "\n",
     "    aspect=(phiM.max()/cosM.max())\n",
     "    ax.set_xlabel('phi [DEG]')\n",
@@ -789,7 +789,7 @@
     "    cbar.ax.set_ylabel('normalised counts')\n",
     "    ax.set_aspect(aspect)\n",
     "\n",
-    "    fig.savefig(\"../PYTHON_graphs/OUTPUTS/SCL_MFPAD_single_\"+CH+\"_\"+en+\"_exp.png\", figsize=(50, 24), dpi=144, transparent=False)"
+    "    fig.savefig(\"../PYTHON_graphs/OUTPUTS/SCR_MFPAD_single_\"+CH+\"_\"+en+\"_exp.png\", figsize=(50, 24), dpi=144, transparent=False)"
    ]
   },
   {
@@ -801,7 +801,7 @@
     "if fileSCL and fileSCR is not None:\n",
     "    fig,ax= plt.subplots(1, figsize=(12, 10))\n",
     "    cs=ax.contourf(phiM,cosM,MFPAD_tot_sum.T, cmap=cmap_temp, levels=20)\n",
-    "    ax.set_title(\"total MFPAD \"+CH+\"_\"+en)\n",
+    "    ax.set_title(\"SCR tot MFPAD n2 \"+CH+\"_\"+en)\n",
     "\n",
     "    aspect=(phiM.max()/cosM.max())\n",
     "    ax.set_xlabel('phi [DEG]')\n",
@@ -813,6 +813,29 @@
     "    ax.set_aspect(aspect)\n",
     "\n",
     "    fig.savefig(\"../PYTHON_graphs/OUTPUTS/SCR_MFPAD_single_\"+CH+\"_\"+en+\"_exp.png\", figsize=(50, 24), dpi=144, transparent=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
+    "cs=ax.contourf(phiM,cosM,MFPAD_tottest, cmap=cmap_temp, levels=20)\n",
+    "# cs=ax.imshow(MFPAD_tottest, cmap=cmap_temp, origin=\"lower\")\n",
+    "ax.set_title(\"total MFPAD KIlian norm \"+CH+\"_\"+en)\n",
+    "\n",
+    "aspect=(phiM.max()/cosM.max())\n",
+    "ax.set_xlabel('phi [DEG]')\n",
+    "ax.set_ylabel('cos(theta) [adm]')\n",
+    "cbar = fig.colorbar(cs,extend='both',shrink=0.9, ax=ax)\n",
+    "cbar.set_ticklabels([\"min\",\"max\"])\n",
+    "cbar.set_ticks([MFPAD_tottest.min(),MFPAD_tottest.max()])\n",
+    "cbar.ax.set_ylabel('normalised counts')\n",
+    "ax.set_aspect(aspect)\n",
+    "\n",
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/total_MFPAD_kilian_\"+CH+\"_\"+en+\"_exp.png\", figsize=(50, 24), dpi=144, transparent=False)"
    ]
   },
   {
@@ -901,26 +924,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#this can be all added togheter to create the total sum\n",
-    "fig,ax = plt.subplots(1,2, figsize=(15, 15), sharex=True, sharey=True)\n",
-    "st = fig.suptitle(\"MFPAD \"+CH+\"_\"+en, fontsize=\"x-large\")\n",
-    "aspect=(phiM.max()/cosM.max())\n",
-    "\n",
-    "cs1=ax[0].contourf(phiM,cosM,MFPAD_RCR_sum.T,cmap=cmap_temp)\n",
-    "ax[0].set_title(\"RCR\")\n",
-    "ax[0].set_ylabel('cos(theta) [adm]')\n",
-    "ax[0].set_xlabel('phi [DEG]')\n",
-    "# fig.colorbar(cs1, extend='both', shrink=0.9, ax=ax[0][0])\n",
-    "ax[0].set_aspect(aspect)\n",
-    "\n",
-    "cs2=ax[1].contourf(phiM,cosM,MFPAD_RCL_sum.T,cmap=cmap_temp)\n",
-    "ax[1].set_title(\"SCR_flip\")\n",
-    "ax[1].set_ylabel('cos(theta) [adm]')\n",
-    "ax[1].set_xlabel('phi [DEG]')\n",
-    "# fig.colorbar(cs2,extend='both', shrink=0.9, ax=ax[0][1])\n",
-    "ax[1].set_aspect(aspect)\n",
-    "\n",
-    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/total_MFPAD_sum_R_test_\"+CH+\"_\"+en+\"_exp.png\", figsize=(50, 24), dpi=144, transparent=False)"
+    "if fileSCL and fileSCR is None:\n",
+    "    #this can be all added togheter to create the total sum\n",
+    "    fig,ax = plt.subplots(1,2, figsize=(15, 15), sharex=True, sharey=True)\n",
+    "    st = fig.suptitle(\"MFPAD \"+CH+\"_\"+en, fontsize=\"x-large\")\n",
+    "    aspect=(phiM.max()/cosM.max())\n",
+    "    \n",
+    "    cs1=ax[0].contourf(phiM,cosM,MFPAD_RCR_sum.T,cmap=cmap_temp)\n",
+    "    ax[0].set_title(\"RCR\")\n",
+    "    ax[0].set_ylabel('cos(theta) [adm]')\n",
+    "    ax[0].set_xlabel('phi [DEG]')\n",
+    "    # fig.colorbar(cs1, extend='both', shrink=0.9, ax=ax[0][0])\n",
+    "    ax[0].set_aspect(aspect)\n",
+    "    \n",
+    "    cs2=ax[1].contourf(phiM,cosM,MFPAD_RCL_sum.T,cmap=cmap_temp)\n",
+    "    ax[1].set_title(\"SCR_flip\")\n",
+    "    ax[1].set_ylabel('cos(theta) [adm]')\n",
+    "    ax[1].set_xlabel('phi [DEG]')\n",
+    "    # fig.colorbar(cs2,extend='both', shrink=0.9, ax=ax[0][1])\n",
+    "    ax[1].set_aspect(aspect)\n",
+    "    \n",
+    "    fig.savefig(\"../PYTHON_graphs/OUTPUTS/total_MFPAD_sum_R_test_\"+CH+\"_\"+en+\"_exp.png\", figsize=(50, 24), dpi=144, transparent=False)"
    ]
   },
   {
@@ -1028,30 +1052,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "if fileSCL and fileSCR is not None:\n",
-    "    fig,ax= plt.subplots(1, figsize=(12, 10))\n",
-    "    cs=ax.contourf(phiM,cosM,mPECD_hires.T, cmap=cmap_temp, levels=10)\n",
-    "    ax.set_title(\"contrast map \"+CH+\"_\"+en)\n",
-    "\n",
-    "    aspect=(phiM.max()/cosM.max())\n",
-    "    ax.set_xlabel('phi [DEG]')\n",
-    "    ax.set_ylabel('cos(theta) [adm]')\n",
-    "    cbar = fig.colorbar(cs,extend='both',shrink=0.9, ax=ax)\n",
-    "    # cbar.set_ticklabels([\"min\",\"max\"])\n",
-    "    # cbar.set_ticks([totMFPAD.min(),totMFPAD.max()])\n",
-    "    cbar.ax.set_ylabel('% of asymmetry')\n",
-    "    ax.set_aspect(aspect)\n",
-    "\n",
-    "    fig.savefig(\"../PYTHON_graphs/OUTPUTS/contrastmap_singlesum_highres_\"+CH+\"_\"+en+\"_exp.png\", figsize=(50, 24), dpi=144,  transparent=False)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "display_name": "Python 3.8.8 64-bit ('base': conda)",
+   "name": "python388jvsc74a57bd00314860021bfd1d6d5065173ecf1d472a069bf5b92310f1daa2ee9c3af705d8c"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1063,7 +1070,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5-final"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
