--- a/b1_map_COPY.ipynb
+++ b/b1_map_COPY.ipynb
@@ -53,17 +53,17 @@
     "# fileSCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/S-C3H3F3O_CH9_550eV_CR_Knov.root\")\n",
     "# fileSCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/S-C3H3F3O_CH9_550eV_CL_Knov.root\")\n",
     "\n",
-    "# 546eV - 8.2eV CH9\n",
-    "fileRCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_546eV_CR_9600-3700ns_multiCH9.root\");en=\"546eV\";CH=\"CH9\";\n",
-    "fileRCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_546eV_CL_9600-3700ns_multiCH9.root\")\n",
+    "# # 546eV - 8.2eV CH9\n",
+    "# fileRCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_546eV_CR_9600-3700ns_multiCH9.root\");en=\"546eV\";CH=\"CH9\";\n",
+    "# fileRCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_546eV_CL_9600-3700ns_multiCH9.root\")\n",
     "\n",
     "# # 544eV - 6.1eV CH9\n",
     "# fileRCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_544.5eV_CR_9600-3700ns_multiCH9.root\");en=\"544eV\";CH=\"CH9\";\n",
     "# fileRCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_544.5eV_CL_9600-3700ns_multiCH9.root\")\n",
     "\n",
-    "# # 542eV - 4eV CH9\n",
-    "# fileRCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_542.5eV_CR_9600-3700ns_COMBI_multiCH9.root\");en=\"542eV\";CH=\"CH9\";\n",
-    "# fileRCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_542.5eV_CL_9600-3700ns_COMBI_multiCH9.root\")\n",
+    "# 542eV - 4eV CH9\n",
+    "fileRCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_542.5eV_CR_9600-3700ns_COMBI_multiCH9.root\");en=\"542eV\";CH=\"CH9\";\n",
+    "fileRCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_542.5eV_CL_9600-3700ns_COMBI_multiCH9.root\")\n",
     "\n",
     "# #541eV 3eV CH9\n",
     "# fileRCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_541.5eV_CR_9600-3700ns_multiCH9.root\");en=\"541eV\";CH=\"CH9\";\n",
